<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8">

        <TextView
            android:id="@+id/child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="儿童 : 10"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/woman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="女 : 10"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@id/child"
            app:layout_constraintEnd_toStartOf="@id/child" />

        <TextView
            android:id="@+id/man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="男 : 10"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@id/child"
            app:layout_constraintEnd_toStartOf="@id/woman" />


        <LinearLayout
            android:id="@+id/area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="区域"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/type"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/area"
                android:textColor="@color/black"
                app:drawableLeftCompat="@drawable/area"
                app:drawableStartCompat="@drawable/area" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toEndOf="@id/area">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/type"
                app:drawableLeftCompat="@drawable/type"
                app:drawableStartCompat="@drawable/type" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/state"
                app:drawableLeftCompat="@drawable/state"
                app:drawableStartCompat="@drawable/state" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_handcard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toTopOf="@id/area"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/child" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>